TS01322-Dong Phan Phat Dat-LAB8

--- a/Lab8/src/main/resources/application.properties
+++ b/Lab8/src/main/resources/application.properties
@@ -1,1 +1,29 @@
-spring.application.name=Lab8
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=J5Shop;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa1
+spring.datasource.password=dat2842007
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# =========================
+# MAIL CONFIG (Gmail SMTP)
+# =========================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=datdppts01322@fpt.edu.vn
+spring.mail.password=osxsvvgtvbtbrrnh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+
+# =========================
+# THYMELEAF + SERVER CONFIG
+# =========================
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+server.port=8080
+
+# =========================
+# FIX @Scheduled + Interface Proxy
+# =========================
+spring.aop.proxy-target-class=true
